refactored VignereCipher