@@ -1,6 +1,7 @@
 package org.application.decoders;
 
 import org.application.Main;
+import org.application.results.cipher.VignereResult;
 import org.crypography_tools.Tools;
 
 import java.util.Arrays;
@@ -8,28 +9,24 @@ import java.util.stream.Collectors;
 
 import static java.lang.Math.abs;
 
+/*
+
+    Method Source: https://pages.mtu.edu/~shene/NSF-4/Tutorial/VIG/Vig-Base.html and subsequent articles
+
+    IOCD -> Calculated IoC - English IoC.
+    KEYLEN -> Length of keyword.
+    KEY -> String of letters, not AIs.
+
+ */
+
 public class VignereCipher {
     public static final double VIGNERE_THRESHOLD = 0.005;
     public static final int MAX_KEYWORD_LENGTH = 30;
 
-    public static void DecryptWithResultsDialogue(String ciphertext) {
-        ciphertext = Tools.Format(ciphertext);
+    // CIPHERTEXT -> KEYLEN -> KEY -> PLAINTEXT
 
-        int keywordLength = GetKeywordLength(ciphertext, MAX_KEYWORD_LENGTH);
-        String keyword = GetKeywordWithGraphAndLength(ciphertext, keywordLength);
-        String plaintext = DecryptWithKeyword(ciphertext, keyword);
-
-        Main.boxHandler.OpenVignereOutput(keyword, keyword, plaintext, ciphertext);
-    }
-
-    public static void DecryptFromDialogue(String ciphertext, String keyword, String predictedKeyword) {
-        ciphertext = Tools.Format(ciphertext);
-        String plaintext = DecryptWithKeyword(ciphertext, keyword);
-
-        Main.boxHandler.OpenVignereOutput(predictedKeyword, keyword, plaintext, ciphertext);
-    }
-
-    public static double TryKeywordLength(String ciphertext, int length) {
+    // Returns IOCD. Generates cosets given length and calculates average IoC.
+    private static double TryKeywordLength(String ciphertext, int length) {
         String[] cosets = Tools.MakeCosets(ciphertext, length);
 
         double sum = 0;
@@ -38,12 +35,14 @@ public class VignereCipher {
             sum += Tools.IndexOfCoincidence(set);
         }
 
-
         double averageIOC = sum / length;
+
+        System.out.println(averageIOC);
 
         return abs(averageIOC - Tools.EnglishIOC);
     }
 
+    // Returns KEYLEN. Tries lengths up to max, and gets smallest less than vignere threshold.
     public static int GetKeywordLength(String ciphertext, int maxLength) {
 
         double[] results = new double[maxLength + 1];
@@ -54,43 +53,45 @@ public class VignereCipher {
             results[i] = TryKeywordLength(ciphertext, i);
         }
 
+        System.out.println(Arrays.toString(results));
 
-        double min = Arrays.stream(results).filter(x -> x < VIGNERE_THRESHOLD).toArray()[0];
-        int imin = Arrays.stream(results).boxed().collect(Collectors.toList()).indexOf(min);
+        double min = Arrays.stream(results).filter(x -> x < VIGNERE_THRESHOLD).toArray()[0]; // Filter to less than Vignere Threshold
+        int imin = Arrays.stream(results).boxed().toList().indexOf(min); // Get index of smallest
 
         return imin;
     }
 
+    // Returns KEY. For each coset, runs X2 analysis - see method.
     public static String GetKeywordWithLength(String ciphertext, int length) {
-        return "N/I";
-    }
-
-    public static String GetKeywordWithGraphAndLength(String ciphertext, int length) {
         String[] cosets = Tools.MakeCosets(ciphertext, length);
-
         String keyword = "";
 
-        for (String set : cosets) {
-            int[] frequencies = Tools.AbsoluteFrequency(set);
+        for (String coset : cosets) {
 
-            int min = Arrays.stream(frequencies).max().orElseThrow();
-            int imin = Arrays.stream(frequencies).boxed().collect(Collectors.toList()).indexOf(min);
+            double minX2 = 100;
+            int minIndex = 0;
 
-            char keyword_character = (char) (Math.floorMod((imin - 4), 26) + 'a');
+            for (int i = 0; i < 26; i++) {
+                coset = Tools.ShiftLetters(coset, -1);
+                double[] observedFrequency = Tools.DecimalFrequency(coset);
 
+                double cosetX2 = Tools.XSquared(observedFrequency, Tools.EnglishLetterFrequencies);
 
-            keyword += keyword_character;
+                if (cosetX2 < minX2) {
+                    minX2 = cosetX2;
+                    minIndex = i;
+                }
+            }
+
+            int index = (minIndex + 1) % 26;
+
+            keyword += (char) (index + 'a');
         }
 
         return keyword;
     }
 
-    public static String GetKeyword(String ciphertext) {
-        int KeywordLength = GetKeywordLength(ciphertext, 20);
-
-        return GetKeywordWithGraphAndLength(ciphertext, KeywordLength);
-    }
-
+    // Returns PLAINTEXT. Shifts cosets by respective keyword char.
     public static String DecryptWithKeyword(String ciphertext, String keyword) {
         int keywordLength = keyword.length();
         String[] cosets = Tools.MakeCosets(ciphertext, keywordLength);
@@ -101,5 +102,24 @@ public class VignereCipher {
         }
 
         return Tools.Interleave(cosets);
+    }
+
+
+    public static void DecryptWithResultsDialogue(String ciphertext) {
+        ciphertext = Tools.Format(ciphertext);
+
+        int keywordLength = GetKeywordLength(ciphertext, MAX_KEYWORD_LENGTH);
+        String keyword = GetKeywordWithLength(ciphertext, keywordLength);
+        String plaintext = DecryptWithKeyword(ciphertext, keyword);
+
+        VignereResult result = new VignereResult(ciphertext, plaintext, keyword, VignereCipher::DecryptFromDialogue);
+
+        Main.boxHandler.OpenVignereOutput(result);
+    }
+
+    public static void DecryptFromDialogue(VignereResult result) {
+        result.plaintext = DecryptWithKeyword(result.ciphertext, result.usedKeyword);
+
+        Main.boxHandler.OpenVignereOutput(result);
     }
 }
